<resources>
    <string name="app_name">Speedtest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_provider">Internet Provider</string>
    <string name="host_server">Host Server</string>
    <string name="start">Start</string>
    <string name="ms">ms</string>
    <string name="ping">Ping</string>
    <string name="mbps">Mbps</string>
    <string name="zero_mbps">0 Mbps</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="zero_digit">0</string>
    <string name="finding">Finding…</string>
    <string name="restart">Restart</string>
</resources>